--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MTA4MjcxMTQ4NzgyODczNDAwMg.GdJxRq.l9TnFk7YqvPWWKTqtGKH4I3hvRcINhDR8FXalI",
+  "token": "MTA4MjcxMTQ4NzgyODczNDAwMg.Gqgc7G.SvOXOOmF60fJN-0dMdloD3NN08BQmy2t1UWNzM",
     "prefix": "..",
     "clientId": "1082711487828734002",
     "guildId": "1238911382725070848",
