--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@discordjs/rest": "^2.3.0",
     "@discordjs/voice": "^0.17.0",
     "@vitalets/google-translate-api": "^9.2.0",
+    "canvas": "^2.11.2",
     "discord-player": "^6.6.10",
     "discord.js": "^14.15.3",
     "ejs": "^3.1.10",
@@ -11,6 +12,7 @@
     "express-session": "^1.18.0",
     "ffmpeg": "^0.0.4",
     "giphy-api": "^2.0.2",
+    "got": "^14.4.1",
     "mediaplex": "^0.0.9",
     "mongoose": "^8.4.4",
     "node-fetch": "^2.7.0",
