--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
     "@discordjs/voice": "^0.17.0",
     "@vitalets/google-translate-api": "^9.2.0",
     "canvas": "^2.11.2",
-    "discord-player": "^6.6.10",
+    "discord-player": "^6.6.2",
+    "discord-player-youtubei": "^1.1.10",
     "discord.js": "^14.15.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "giphy-api": "^2.0.2",
     "got": "^14.4.1",
     "mediaplex": "^0.0.9",
     "mongoose": "^8.4.4",
     "node-fetch": "^2.7.0",
+    "opusscript": "^0.0.8",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "socket.io": "^4.7.5",
