--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "@discordjs/voice": "^0.17.0",
     "@vitalets/google-translate-api": "^9.2.0",
     "canvas": "^2.11.2",
+    "cheerio": "^1.0.0-rc.12",
     "discord-player": "^6.6.2",
-    "discord-player-youtubei": "^1.1.10",
+    "discord-player-youtubei": "^1.1.14",
     "discord.js": "^14.15.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -22,17 +23,18 @@
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "socket.io": "^4.7.5",
+    "youtubei.js": "^10.1.0",
     "ytdl-core": "^4.11.5"
   },
   "name": "src",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "test": "node deploy.js",
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Notsoldierocks",
   "license": "ISC",
   "description": ""
 }
