--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
     "discord-player": "^6.6.2",
-    "discord-player-youtubei": "^1.1.14",
+    "discord-player-youtubei": "^1.2.0-beta.3",
     "discord.js": "^14.15.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
