--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "@discord-player/extractor": "^4.4.7",
+    "@discord-player/extractor": "^4.5.1",
     "@discordjs/rest": "^2.3.0",
     "@discordjs/voice": "^0.17.0",
     "@vitalets/google-translate-api": "^9.2.0",
     "canvas": "^2.11.2",
-    "cheerio": "^1.0.0-rc.12",
-    "discord-player": "^6.6.2",
-    "discord-player-youtubei": "^1.2.0-beta.3",
+    "cheerio": "^1.0.0",
+    "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.2.6",
     "discord.js": "^14.15.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -15,15 +15,15 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "giphy-api": "^2.0.2",
-    "got": "^14.4.1",
+    "got": "^14.4.2",
     "mediaplex": "^0.0.9",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.5.3",
     "node-fetch": "^2.7.0",
     "opusscript": "^0.0.8",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "socket.io": "^4.7.5",
-    "youtubei.js": "^10.1.0",
+    "youtubei.js": "^10.3.0",
     "ytdl-core": "^4.11.5"
   },
   "name": "src",
