--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@discordjs/rest": "^2.3.0",
     "@discordjs/voice": "^0.17.0",
     "@vitalets/google-translate-api": "^9.2.0",
+    "are-we-there-yet": "^4.0.2",
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0",
     "discord-player": "^6.7.1",
@@ -14,14 +15,19 @@
     "express-session": "^1.18.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
+    "gauge": "^5.0.2",
     "giphy-api": "^2.0.2",
+    "glob": "^11.0.0",
     "got": "^14.4.2",
+    "inflight": "^1.0.6",
     "mediaplex": "^0.0.9",
     "mongoose": "^8.5.4",
     "node-fetch": "^2.7.0",
+    "npmlog": "^7.0.1",
     "opusscript": "^0.0.8",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "rimraf": "^6.0.1",
     "socket.io": "^4.7.5",
     "youtubei.js": "^10.3.0",
     "ytdl-core": "^4.11.5"
