--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "glob": "^11.0.0",
     "got": "^14.4.2",
     "inflight": "^1.0.6",
+    "install": "^0.13.0",
     "mediaplex": "^0.0.9",
     "mongoose": "^8.5.4",
+    "musicard": "^2.0.5",
     "node-fetch": "^2.7.0",
+    "npm": "^10.8.2",
     "npmlog": "^7.0.1",
     "opusscript": "^0.0.8",
     "passport": "^0.7.0",
