--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@discordjs/voice": "^0.17.0",
     "@vitalets/google-translate-api": "^9.2.0",
     "are-we-there-yet": "^4.0.2",
+    "canvafy": "^7.2.0",
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0",
     "discord-player": "^6.7.1",
