Refactor .gitignore to exclude Jamify.zip(Just For Ease)

--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,4 @@ dist
 
 # Ignore config, package-lock, and package files
 config.json
-package-lock.json
-package.json
-config.json
-config.json
+Jamify.zip
