Refactor embed color in resume, setprefix, stop, botinfo, queue, userinfo, avatar, setpoll, rate, endpoll, invite-me, schedulepoll, and weather commands

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@discord-player/extractor": "^4.5.1",
     "@discordjs/rest": "^2.3.0",
     "@discordjs/voice": "^0.17.0",
+    "@google-cloud/translate": "^8.5.0",
     "@vitalets/google-translate-api": "^9.2.0",
     "are-we-there-yet": "^4.0.2",
     "canvafy": "^7.2.0",
@@ -19,6 +20,7 @@
     "gauge": "^5.0.2",
     "giphy-api": "^2.0.2",
     "glob": "^11.0.0",
+    "google-translate-api-x": "^10.7.1",
     "got": "^14.4.2",
     "inflight": "^1.0.6",
     "install": "^0.13.0",
