--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@discord-player/extractor": "^4.5.1",
-    "@discordjs/rest": "^2.3.0",
+    "@discordjs/rest": "^2.4.0",
     "@discordjs/voice": "^0.17.0",
     "@google-cloud/translate": "^8.5.0",
     "@vitalets/google-translate-api": "^9.2.0",
@@ -10,8 +10,8 @@
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0",
     "discord-player": "^6.7.1",
-    "discord-player-youtubei": "^1.2.6",
-    "discord.js": "^14.15.3",
+    "discord-player-youtubei": "^1.3.2",
+    "discord.js": "^14.16.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -25,18 +25,19 @@
     "inflight": "^1.0.6",
     "install": "^0.13.0",
     "mediaplex": "^0.0.9",
-    "mongoose": "^8.5.4",
+    "mongoose": "^8.6.3",
     "musicard": "^2.0.5",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^2.6.7",
     "node-schedule": "^2.1.1",
-    "npm": "^10.8.2",
+    "npm": "^10.8.3",
     "npmlog": "^7.0.1",
-    "opusscript": "^0.0.8",
+    "opusscript": "^0.1.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "prism-media": "^1.3.5",
     "rimraf": "^6.0.1",
-    "socket.io": "^4.7.5",
-    "youtubei.js": "^10.3.0",
+    "socket.io": "^4.8.0",
+    "youtubei.js": "^10.5.0",
     "ytdl-core": "^4.11.5"
   },
   "name": "src",
