--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cheerio": "^1.0.0",
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.3.2",
-    "discord.js": "^14.16.2",
+    "discord.js": "^14.16.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -25,23 +25,24 @@
     "inflight": "^1.0.6",
     "install": "^0.13.0",
     "mediaplex": "^0.0.9",
-    "mongoose": "^8.6.3",
+    "mongoose": "^8.7.0",
     "musicard": "^2.0.5",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^2.7.0",
     "node-schedule": "^2.1.1",
-    "npm": "^10.8.3",
+    "npm": "^10.9.0",
     "npmlog": "^7.0.1",
     "opusscript": "^0.1.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "prism-media": "^1.3.5",
+    "puppeteer": "^23.5.0",
     "rimraf": "^6.0.1",
     "socket.io": "^4.8.0",
     "youtubei.js": "^10.5.0",
     "ytdl-core": "^4.11.5"
   },
   "name": "src",
-  "version": "3.0.0",
+  "version": "3.0.0-beta",
   "main": "index.js",
   "scripts": {
     "test": "node deploy.js",
